--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+:root {
+  --box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
+    rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
+    rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+.quotePic {
+  background-color: pink;
+  height: 80vh;
+  width: 100vw;
+  overflow-x: hidden;
+  margin-top: 15px;
+  box-shadow: var(--box-shadow);
+  padding: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  background-color: blue;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 15vh;
+  width: 100vw;
+  box-shadow: var(--box-shadow);
 }
 
-.App-link {
-  color: #61dafb;
+.topRightButtons {
+  position: absolute;
+  top: 20vh;
+  right: 2vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 2;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.saveIcon,
+.collectionIcon {
+  background-color: turquoise;
+  height: 50px;
+  width: 50px;
+  border-radius: 100px;
+  margin-left: 30px;
+  box-shadow: var(--box-shadow);
+}
+.middleSideButtons {
+  z-index: 2;
+  position: absolute;
+  bottom: 40%;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.rightIcon,
+.leftIcon {
+  background-color: purple;
+  height: 50px;
+  width: 50px;
+  box-shadow: var(--box-shadow);
 }
