--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   --box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
     rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
     rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    
+      --color1: #547980;
+      --color2: #594F4F;
+      --color3: #45ADA8;
+      --color4: #9DE0AD;
+      --color5: #E5FCC2;
+    
+  
 }
 .quotePic {
   background-color: pink;
@@ -14,7 +22,7 @@
 }
 
 .header {
-  background-color: blue;
+  background-color: var(--color2);
   display: flex;
   justify-content: center;
   align-items: center;
