--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root{
+  --color1: #547980;
+  --color2: #594F4F;
+  --color3: #45ADA8;
+  --color4: #9DE0AD;
+  --color5: #E5FCC2;
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +14,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #547980;
 }
 
 code {
