--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root{
   --color1: #547980;
   --color2: #594F4F;
@@ -7,17 +11,76 @@
 
 }
 
+*{
+
+box-sizing: border-box;
+}
+
+.topRightButtons {
+
+  justify-content: center;
+}
+
+
+
 body {
   margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #547980;
+
 }
 
+
+  .nav{
+    background-color: coral;
+    color: #45ADA8;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 2rem;
+    padding: 0 1rem;
+  }
+
+  .site-tile {
+    font-size: 2rem;
+  }
+
+  .nav ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+  }
+
+  .nav a {
+    color: inherit;
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: .25rem;
+  }
+
+  .nav li.active {
+    background-color: azure;
+  }
+.nav:hover{
+  background-color: #45ADA8;
+}
+
+
+.nav li:hover {
+  background-color: lightsalmon;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
