change the collection page template

--- a/src/components/CollectionPage/CollectionPage.css
+++ b/src/components/CollectionPage/CollectionPage.css
@@ -1,4 +1,10 @@
 .background-image{
-    background-image: url('/public/coll.jpg');
+    background-image: url('/public/2.jpeg');
     
 }
+
+.fa1 {
+    left: 3vw;
+    top: 20vh;
+   
+  }
