--- a/src/components/CollectionPage/CollectionPage.css
+++ b/src/components/CollectionPage/CollectionPage.css
@@ -2,3 +2,11 @@
     background-image: url('/public/coll.jpg');
     
 }
+
+.card{
+    background-color: green;
+   text-align: center;
+}
+.card p{
+    padding: 15px;
+}
