--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,8 +5,9 @@
     height: 70px;
     width: 100%;
     font-size: 20px;
-    bottom:0;
+    bottom:-20vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 200;
 }
