--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,9 +5,19 @@
     height: 70px;
     width: 100%;
     font-size: 20px;
-    bottom:-20vh;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 200;
+}
+.homeFooter{
+    bottom:-10vh;
+    position:absolute;
+    width:100vw;
+}
+.collectionFooter{
+
+  
+    position:absolute;
+    width: 100vw;
 }
