--- a/src/App.css
+++ b/src/App.css
@@ -22,31 +22,14 @@
   font-size: 50px;
   text-align: center;
 
-  /* font-family: 'Anton', sans-serif; */
-/* font-family: 'Antonio', sans-serif; */
-/* font-family: 'Arapey', serif; */
-/* font-family: 'Atma', cursive; */
-/* font-family: 'Bangers', cursive; */
-/* font-family: 'Boogaloo', cursive; */
-/* font-family: 'Cormorant', serif; */
-/* font-family: 'Cormorant Infant', serif; */
-/* font-family: 'Cormorant SC', serif; */
-/* font-family: 'Cormorant Upright', serif; */
-/* font-family: 'Fraunces', serif; */
-/* font-family: 'Julius Sans One', sans-serif; */
-/* font-family: 'Katibeh', cursive; */
-/* font-family: 'League Gothic', sans-serif; */
-/* font-family: 'Playball', cursive; */
-/* font-family: 'PT Serif Caption', serif; */
-/* font-family: 'Sansita', sans-serif; */
-/* font-family: 'Shantell Sans', cursive; */
-/* font-family: 'Sigmar One', cursive; */
-/* font-family: 'Sorts Mill Goudy', serif; */
-/* font-family: 'Ultra', serif; */
-/* font-family: simonetta; */
+
 }
 
-
+.Navbar{
+  color: var(--color3);
+  font-weight: 600;
+  font-size: 20px;
+}
 
 .quotePic {
   position:absolute;
